<resources>

    <string name="mapbox_access_token"> pk.eyJ1IjoiY2hlc3Rlcmh1MDAwOCIsImEiOiJja3NkN2ZveGYwbnllMzFwaTB6anFrMmh1In0.sGe3YiahwOboyt92i2n3OQ</string>

    <string name="app_name">PSafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Psafe</string>
    <string name="nav_header_subtitle">Keep pedestrian safe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="action_back_sign_in">back</string>
    <string name="menu_home">PSafe</string>
    <string name="menu_gallery">News</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_login">Welcome to Psafe, Please log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Welcome to Psafe, Please sign up</string>
    <string name="password_need">do not use empty password</string>
    <string name="email_need">do not use empty email</string>
    <string name="login_success">login successfully</string>
    <string name="logout_success"> logout successfully</string>

    <string name="action_logout">log out</string>
    <string name="title_activity_map">Map</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="zoom_map_in_and_out_instruction">aaaaa</string>
    <string name="menu_map_fragment">Map</string>
    <string name="menu_news">News</string>
    <string name="home_fragment_content">How to use this app</string>
    <string name="sos">SOS</string>
    <string name="title_placeholder">news_title</string>
    <string name="news_placeholder">content</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="menu_tips">Tips</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_location_permission_explanation">need permittion</string>
    <string name="menu_test_map_fragment">test map</string>
    <string name="menu_help">Help</string>
    <string name="help_string">This video is the instruction of PSafe</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard_tips">Tips</string>
    <string name="dashboard_news">News</string>
    <string name="dashboard_visualization">Visualization</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="current_location">Lat: %1$f Long: %2$f</string>
    <string name="tracking_enabled">Tracking mode re-enabled</string>
    <string name="tracking_already_enabled">Tracking already enabled. Move the map</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Basic</string>
    <string name="sync_header">Advanced</string>

    <!-- Bassic Preferences -->
    <string name="signature_title">Your email</string>
    <string name="reply_title">Default reply action</string>

    <!-- Advanced Preferences -->
    <string name="menu_setting">Setting</string>
    <string name="advanced_notification">Notification</string>
    <string name="advanced_alert_off">Alert off</string>
    <string name="advanced_alert_on">Alert on</string>
    <string name="advanced_alert">Alert </string>
    <string name="map_input_hint">click to search your destination</string>
    <string name="dashboard_weather">Weather</string>
    <string name="sos_button">Long press to call 000</string>
    <string name="walk">Walk</string>
    <string name="bike">bike</string>
    <string name="car">car</string>
    <string name="nav_start">START</string>
    <string name="default_time">default time</string>
    <string name="default_destination">destination</string>
    <string name="nav_end">END</string>
    <string name="safe_text">Glad you are safe</string>
    <string name="detail_button">detail</string>
    <string name="setting_privacy">Privacy</string>
    <string name="home_text_2">Tips: 6 steps when you get hit by a car</string>
    <string name="home_text_1">PSAFE</string>
    <string name="red_point_instruction">The black dots represent traffic accidents involving pedestrians in Victoria within five years</string>
    <string name="menu_weather">Weather</string>

    <string name="home_card_2_text_1">Going out safely</string>
    <string name="home_card_2_text_2">temperature</string>
    <string name="title_activity_marker">MarkerActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="distance">"distance: "</string>
    <string name="temperature">"Temperature: "</string>
    <string name="humidity">"Humidity: "</string>
    <string name="channel_name">Psafe</string>
    <string name="channel_description">Psafe channel</string>
    <string name="nearDangerousZone">Near Dangerous Zone!!!!</string>
    <string name="home_card_1_text_1">Enter your destination</string>
    <string name="home_card_1_text_2">Plan your safe routes</string>
    <string name="home_card_2_tips">Tips: First look right, then look left!</string>
    <string name="channel_name_drawer">drawer</string>
    <string name="default_distance">distance</string>
    <string name="guidance">Guidance</string>
    <string name="advanced_sound">Sound</string>
    <string name="advanced_sound_on">Sound on</string>
    <string name="advanced_sound_off">sound off</string>
    <string name="setting_contact">Contact us</string>
    <string name="guide1">Psafe is committed to ensuring pedestrian safety by alerting in areas with a high incidence of car accidents. On the main screen: long press the alert button to call 000; the search box to enter a destination to create a safe route.</string>
    <string name="guide2">The black dots in the map screen are high hazard areas and will emit notification when pedestrians walk near them.</string>
    <string name="guide3">INFO page: This page has three main sections: tips, news, and weather.</string>
</resources>