<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.psafe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/homeone_layout" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.psafe.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.psafe.ui.maps.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/maps_fragment" />
    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.psafe.ui.tips.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/tips_fragment">
        <action
            android:id="@+id/action_nav_tips_to_dashboardFragment"
            app:destination="@id/nav_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.psafe.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" >
        <action
            android:id="@+id/action_nav_help_to_nav_setting"
            app:destination="@id/nav_setting" />
    </fragment>
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.psafe.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_nav_tips"
            app:destination="@id/nav_tips" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_weather"
            app:destination="@id/nav_weather" />
    </fragment>
    <fragment
        android:id="@+id/nav_navigation"
        android:name="com.example.psafe.ui.navigation.NavigationFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_navigation" >
        <action
            android:id="@+id/action_nav_navigation_to_safeFragment"
            app:destination="@id/safeFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.psafe.ui.setting.SettingsFragment"
        android:label="@string/menu_setting" >
        <action
            android:id="@+id/action_nav_setting_to_nav_help"
            app:destination="@id/nav_help" />
    </fragment>
    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.psafe.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" >
        <action
            android:id="@+id/action_nav_weather_to_nav_dashboard"
            app:destination="@id/nav_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/safeFragment"
        android:name="com.example.psafe.ui.SafeFragment"
        android:label="fragment_safe"
        tools:layout="@layout/fragment_safe" >
        <action
            android:id="@+id/action_safeFragment_to_nav_navigation"
            app:destination="@id/nav_navigation" />
    </fragment>


</navigation>