<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/oneTipsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/card_tips"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/square"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/menu_news"


                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toStartOf="@+id/button_like_tips"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <pl.droidsonroids.gif.GifImageButton
                android:id="@+id/button_like_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_thumb_up_off_alt_24"
                android:background="@color/white"

                android:text="@string/like"
                app:layout_constraintBottom_toTopOf="@id/button_dislike_tips"
                app:layout_constraintEnd_toEndOf="parent"


                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <pl.droidsonroids.gif.GifImageButton
                android:id="@+id/button_dislike_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@drawable/baseline_thumb_down_off_alt_24"
                android:background="@color/white"


                android:text="@string/dislike"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_like_tips" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>